# Security-copilot-agent

./: --job  .env.example  .gitignore  CI_CD_FIXES.md  CLI_SETUP_GUIDE.md  CONFIGURATION_REPORT.md  Dockerfile  FINAL_STATUS.md  LICENSE  README.md  SETUP.md  SETUP_COMPLETE.py  pyproject.toml  requirements.txt  test_db.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
deployment/: azure-infrastructure.json  deploy.sh
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  QUICKSTART.md  SECURITY.md  azure-keys-endpoints.md
docs/security-findings/: finding-20250806-101751.md  finding-20250806-102119.md
scripts/: azure-discovery.ps1  azure-discovery.sh  production-env.json  setup-azure-resources.ps1  setup-azure-resources.sh  setup-github-secrets.ps1  setup-github-secrets.sh  setup-guide.ps1
scripts/security-fixes/: finding-20250806-101751-remediation.sh  finding-20250806-102119-remediation.sh
src/security_copilot/: __init__.py  cli.py  config.py  database.py  github_integration.py  honeypot.py  models.py  scanner.py
tests/: conftest.py  test_scanner.py
